created hashed password

--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,12 @@
             <version>2.6</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.mindrot</groupId>
+            <artifactId>jbcrypt</artifactId>
+            <version>0.3m</version>
+        </dependency>
+
 
     </dependencies>
 
